logs/desktop_commander_server_0_20251005_000901.log
  File "E:\ECHO_XV4\MLS\servers\desktop_commander_server.py", line 440
    {"" if "crud" not in features else '''
                                          ^
SyntaxError: f-string: expecting '}'
